# coursework1

./: README.md  lala.c
project/: CMakeLists.txt  books.txt  users.txt
project/include/: book_management.h  global.h  interface.h
project/src/: display.c  interface.c  main.c  user.c
project1/: CMakeLists.txt  books.txt  storeBook.c  users.txt
project1/include/: book_management.h  display.h  global.h  interface.h  user.h
project1/src/: book_management.c  display.c  interface.c  main.c  user.c
